// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Password renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ GYDHa"
    disabled={true}
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <div
      className="sc-hhICeM hRPMnN"
    >
      <input
        className="sc-eZkcaX fkWXLp"
        disabled={true}
        placeholder=" "
        type="password"
      />
      <div
        className="sc-futMm ktwkcM"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ GYDHa"
    disabled={true}
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <div
      className="sc-hhICeM hRPMnN"
    >
      <input
        className="sc-eZkcaX YfCXO"
        disabled={true}
        placeholder=" "
        type="password"
      />
      <div
        className="sc-futMm ktwkcM"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ GYDHa"
    disabled={true}
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX enLVow"
        disabled={true}
        placeholder=" "
        type="password"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
      <div
        className="sc-futMm ktwkcM"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <div
      className="sc-hhICeM hRPMnN"
    >
      <input
        className="sc-eZkcaX iTrDwX"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-futMm ktwkcM"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQikvm bhrXDV"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <div
      className="sc-hhICeM hRPMnN"
    >
      <input
        className="sc-eZkcaX eetSoU"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-futMm ktwkcM"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQikvm bhrXDV"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX klYrPG"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
      <div
        className="sc-futMm ktwkcM"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQikvm bhrXDV"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <div
      className="sc-hhICeM hRPMnN"
    >
      <input
        className="sc-eZkcaX fkWXLp"
        placeholder=" "
        readOnly={true}
        type="password"
      />
      <div
        className="sc-futMm ktwkcM"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <div
      className="sc-hhICeM hRPMnN"
    >
      <input
        className="sc-eZkcaX YfCXO"
        placeholder=" "
        readOnly={true}
        type="password"
      />
      <div
        className="sc-futMm ktwkcM"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX enLVow"
        placeholder=" "
        readOnly={true}
        type="password"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
      <div
        className="sc-futMm ktwkcM"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <div
      className="sc-hhICeM hRPMnN"
    >
      <input
        className="sc-eZkcaX fkWXLp"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-futMm ktwkcM"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <div
      className="sc-hhICeM hRPMnN"
    >
      <input
        className="sc-eZkcaX YfCXO"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-futMm ktwkcM"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX enLVow"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
      <div
        className="sc-futMm ktwkcM"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <div
      className="sc-hhICeM hRPMnN"
    >
      <input
        className="sc-eZkcaX fkWXLp"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-futMm ktwkcM"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <div
      className="sc-hhICeM hRPMnN"
    >
      <input
        className="sc-eZkcaX YfCXO"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-futMm ktwkcM"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX enLVow"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
      <div
        className="sc-futMm ktwkcM"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
      dir="rtl"
    >
      medium
    </label>
    <div
      className="sc-hhICeM hRPMnN"
    >
      <input
        className="sc-eZkcaX fkWXLp"
        dir="rtl"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-futMm eYFUxP"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
      dir="rtl"
    >
      large
    </label>
    <div
      className="sc-hhICeM hRPMnN"
    >
      <input
        className="sc-eZkcaX YfCXO"
        dir="rtl"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-futMm eYFUxP"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX enLVow"
        dir="rtl"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-eqKtKx uXXXN"
      >
        xlarge
      </label>
      <div
        className="sc-futMm eYFUxP"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM hRPMnN"
    >
      <input
        className="sc-eZkcaX fkWXLp"
        placeholder="medium"
        type="password"
      />
      <div
        className="sc-futMm ktwkcM"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM hRPMnN"
    >
      <input
        className="sc-eZkcaX YfCXO"
        placeholder="large"
        type="password"
      />
      <div
        className="sc-futMm ktwkcM"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX kVGuHt"
        placeholder="xlarge"
        type="password"
      />
      <label
        className="sc-eqKtKx aGCUy"
      />
      <div
        className="sc-futMm ktwkcM"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <div
      className="sc-hhICeM hRPMnN"
    >
      <input
        className="sc-eZkcaX wvmEy"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-futMm ktwkcM"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <div
      className="sc-hhICeM hRPMnN"
    >
      <input
        className="sc-eZkcaX huIhzl"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-futMm ktwkcM"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM eLTOhr"
    >
      <input
        className="sc-eZkcaX enLVow"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
      <div
        className="sc-futMm ktwkcM"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
